shifting to single css and fixing routing
Put all the css into one file and  then made sure paths were absolute. Also put the logo up on the nav bar. Trying to get footers to behave on housing page, but that doesn't work. It is fine on the giveaid and needaid pages where the main tag is empty (weird)

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,13 +1,19 @@
+.nav-bar-container {
+  display: flex;
+  flex-direction: column;
+}
+
 /* general page layout for resources pages (header, body, footer) */
 .resources-page {
   display: flex;
   flex-direction: column;
 }
 
+/* strangely the flex grow to keep the footer at the bottom works with empty main tags but not filled ones*/
 main {
   flex: 1;
   flex-grow: 1;
-  padding: 0px 20px 20px;
+  padding: 30px 20px 20px;
 }
 
 body {
@@ -47,16 +53,11 @@ footer {
 
 /* find-or-give-aid styles for header navigation */
 .find-or-give-aid {
-  position: flex;
   gap: 20px;
-  margin-bottom: 5px;
-  top: 0;
-  left: 0;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 15px 20px;
   background-color: rgb(228, 240, 245);
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   z-index: 2; /* Ensures navbar stays above other elements */
@@ -78,7 +79,7 @@ footer {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  padding: 15px 20px;
+  padding: 15px 0px;
   background-color: rgb(228, 240, 245);
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   z-index: 1; /* Ensures navbar stays above other elements */
@@ -90,12 +91,20 @@ footer {
   font-size: 16px;
 }
 
+.welcome-selection {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 15px 20px;
+}
+
 .mission-div {
   display: flex;
   justify-content: space-evenly;
   max-width: 700px;
   align-items: center;
   padding: 15px 20px;
+  margin-bottom: 20px;
   background-color: rgb(228, 240, 245);
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
@@ -129,12 +138,11 @@ footer {
   font-size: 16px;
 }
 
-
-
 #findaid-btn:hover, #giveaid-btn:hover {
   background-color: #4caf50;
   box-shadow: 4px 6px 8px rgba(17, 131, 89, 0.3);
 }
+
 
 /*BUTTON END */
 
